force-app/main/default/objects/Artl_AttributeValidation__mdt/Artl_AttributeValidation__mdt.object-meta.xml
<CustomObject>
    <label>AttributeValidation</label>
    <pluralLabel>AttributeValidation</pluralLabel>
</CustomObject>