force-app/main/default/objects/Artl_AttributeValidation__mdt/fields/ARTL_Object__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Object__c</fullName>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order</fullName>
                <default>true</default>
                <label>Order</label>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Quote and Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>