force-app/main/default/objects/Artl_AttributeValidation__mdt/fields/Attribute_JSON__c.field-meta.xml
<CustomField>
    <fullName>Attribute_JSON__c</fullName>
    <label>Attribute JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>