force-app/main/default/objects/Artl_AttributeValidation__mdt/fields/AttributeCode__c.field-meta.xml
<CustomField>
    <fullName>AttributeCode__c</fullName>
    <label>Attribute Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>